# SampleFastApiApp

./: pyproject.toml
samplefastapiapp/: main.py
samplefastapiapp/src/api/: app.py
samplefastapiapp/src/api/routers/v1/: __init__.py  user.py
samplefastapiapp/src/database/: __init__.py
samplefastapiapp/src/database/models/: user.py
